注册中心开户认证时的配置
http://cloud.spring.io/spring-cloud-static/Finchley.RELEASE/multi/multi__service_discovery_eureka_clients.html#_authenticating_with_the_eureka_server

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,12 +7,9 @@ spring:
     active: default
 eureka:
   client:
+    fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    prefer-ip-address: true
-    metadata-map:
-      instanceId: ${spring.application.name}:${random.value}
+      defaultZone: http://root:123456@localhost:8761/eureka/
 logging:
   level:
     org.springframework.cloud: DEBUG
