--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ eureka:
     healthcheck:
       enabled: true
     service-url:
-      defaultZone: http://root:123456@localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
   instance:
     # 使用IP注册服务(而非主机名)
     prefer-ip-address: true
