--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,8 @@ eureka:
       enabled: true
     service-url:
 #      defaultZone: http://peer1:8761/eureka/,http://peer2:8762/eureka/
-      defaultZone: http://localhost:8761/eureka/
+#      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://192.168.0.105:8761/eureka/
   instance:
     prefer-ip-address: true
     # 定义服务失效时间，默认：90，单位：秒
@@ -23,3 +24,10 @@ logging:
   level:
     org.springframework.cloud: DEBUG
     org.springframework.boot: INFO
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+          - health
+          - hystrix.stream
